2007-12-15  Inge Wallin  <inge@lysator.liu.se>

	Fix unnecessary warnings:
	* MarbleWidget.cpp,
	TileCreator.cpp,
	AbstractLayer/AbstractLayerData.h,
	AbstractLayer/AbstractLayerContainer.cpp,
	AbstractLayer/AbstractLayerData.cpp,
	TileLoader.cpp,
	PlaceMarkLayout.cpp,
	XmlHandler.cpp,
	PlaceMarkManager.cpp,
	FileViewModel.cpp,
	TextureColorizer.cpp,
	geodata/data/GeoDataIconStyle.h,
	geodata/data/GeoDataPoint.cpp,
	geodata/data/GeoDataFeature.cpp,
	geodata/data/GeoDataPoint.h,
	geodata/data/GeoDataLabelStyle.cpp,
	gps/Route.cpp,
	gps/RouteContainer.cpp,
	gps/Track.cpp,
	gps/RouteContainer.h,
	gps/GpsTracking.cpp,
	gps/TrackContainer.h,
	gps/WaypointContainer.cpp,
	gps/Waypoint.h,
	gps/GpxFileModel.cpp,
	gps/WaypointContainer.h:  Fix most warnings.
	
	Bugfix: 
	* src/lib/geodata/data/GeoDataIconStyle.cpp (setHotSpot): use (x, y)
	instead of (x, x):
	
	Mini fixes
	* src/lib/MarbleWidget.h: Fix apidox typo.
	* src/lib/geodata/data/GeoDataIconStyle.h: Add ingwa as copyright holder

2007-13-11  Torsten Rahn  <rahn@kde.org>

    * src/lib/PlaceMarkLayout.{h,cpp}: Speed-up and better code

2007-12-11  Torsten Rahn  <rahn@kde.org>

    One single major bug left for the flat map and 
    the flat map is now as fast as the globe.

    * src/lib/MeasureTool.cpp: degX,Y -> lon, lat

    * src/lib/MarbleWidget.cpp:
       - Some fix by Jan Becker about screenCoordinates(...)
       - degX,Y -> lon, lat
    * src/lib/VectorMap.{h,cpp}:
       - Speedup by avoiding Quaternion representation for
         rectangular projection
       - degX,Y -> lon, lat
    * src/lib/PlaceMarkLayout.cpp:
       - Fixing "two few placemarks" bug for rect. projection
       - Speedup by avoiding Quaternion representation for
         rect. projection
       - degX,Y -> lon, lat

2007-12-11  Torsten Rahn  <rahn@kde.org>

    Patch set by Jan Becker <tahoma@gmx.de>:
    * src/lib/MeasureTool.cpp:
      Bugfix to make Measuretool mostly work in 
      Equirectangular projection (tiny small issues